--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <script src="arcamera.js" type="text/javascript"></script>
     <script src="wtracker.js" type="text/javascript"></script>
-    <script src="Build/WebAR_World.loader.js"></script>
+    <script src="Build/AR.loader.js"></script>
     <script>
         var initialize = async() =>{
             var unityCanvas = document.querySelector("#unity-canvas");
@@ -96,9 +96,9 @@
             
             document.getElementById('startARDiv').style.display = 'none';
             createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/WebAR_World.data",
-                    frameworkUrl: "Build/WebAR_World.framework.js",
-                    codeUrl: "Build/WebAR_World.wasm",
+                    dataUrl: "Build/AR.data",
+                    frameworkUrl: "Build/AR.framework.js",
+                    codeUrl: "Build/AR.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "DefaultCompany",
                     productName: "AR_NEW",
